background color change

--- a/unit-3/css/style.css
+++ b/unit-3/css/style.css
@@ -1,6 +1,6 @@
 /* Jaimi Luckett's First General Assembly Page	*/
 body {
-    background-color: #03b9e0;
+    background-color: #EFEFF3;
     color: #373638;
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 14px;
