--- a/unit-5/css/style.css
+++ b/unit-5/css/style.css
@@ -17,13 +17,19 @@ body {
 }
 
 header {
-	background-color:#7a8d37;
+	/*background-color:#7a8d37; REPLACE AFTER LESSON 5*/
+	background-color: #FFED74;/* REMOVE AFTER LESSON 5*/
+	border: 1px black solid;/* REMOVE AFTER LESSON 5*/
+	padding: 20px; /* REMOVE AFTER LESSON 5*/
 }
 
 
 nav {
 	float: right;
 	text-transform: uppercase;
+	background-color: #E8C66A;/* REMOVE AFTER LESSON 5*/
+	border: 1px black solid;/* REMOVE AFTER LESSON 5*/
+	padding: 20px; /* REMOVE AFTER LESSON 5*/
 }
 
 nav a {
@@ -35,6 +41,9 @@ nav a {
 
 section {
 	padding: 2em 0;
+	background-color: #E89C6C;/* REMOVE AFTER LESSON 5*/
+	border: 1px black solid;/* REMOVE AFTER LESSON 5*/
+
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -65,6 +74,11 @@ a {
 a:hover {
 	color: #896a51;
 }
+
+footer {
+	background-color: #FF957E;/* REMOVE AFTER LESSON 5*/
+	border: 1px black solid;/* REMOVE AFTER LESSON 5*/
+	padding: 20px; /* REMOVE AFTER LESSON 5*/
 }
 
 footer ul {
