still trying to get containers to float

--- a/unit-5/css/style.css
+++ b/unit-5/css/style.css
@@ -110,12 +110,24 @@ footer ul {
 
 #skills {
 	width: 30%;
-	float: left;
-	padding: 1em;
-
 }
 
 #skills img {
 	width: 100%;
 	border-radius: 100%;
+}
+
+#content {
+    float: left;
+	padding: 1em;
+}
+
+#development {
+	float: left;
+	padding: 1em;
+}
+
+#editing {
+   float: left;
+	padding: 1em;
 }
