--- a/unit-6/css/style.css
+++ b/unit-6/css/style.css
@@ -39,7 +39,7 @@ section {
 }
 
 h1,h2,h3,h4,h5,h6 {
-	color: #03b9e0;
+	color: #303568;
 	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;
 }
