--- a/unit-8/css/style.css
+++ b/unit-8/css/style.css
@@ -97,7 +97,7 @@ footer .text {
 #hero {
 	background: url(../images/hero-banner.png);
     width: 100%;
-    height: auto;
+    height: 100%;
     /*background-size: cover;*/
 	background-size: contain;
 	background-repeat: no-repeat;
