--- a/unit-8/css/style.css
+++ b/unit-8/css/style.css
@@ -96,10 +96,9 @@ footer .text {
 
 #hero {
 	background: url(../images/hero-banner.png);
-    width: 100%;
-    height: 100%;
+    height: 90vh;
     /*background-size: cover;*/
-	background-size: contain;
+	background-size: 100%;
 	background-repeat: no-repeat;
     /* DON'T KNOW HOW TO GET THE IMAGE TO BE RESPONSIVE*/
 }
